# keycloak-openapi

./: .gitignore  LICENSE  Makefile  README.md
example_app/: .gitignore  .prettierignore  package-lock.json  package.json
example_app/src/: index.ts
keycloak/: 10.0.html  10.0.json  10.0.yml  11.0.json  11.0.yml  12.0-patched.json  12.0-patched.yml  12.0.json  12.0.yml  13.0-patched.json  13.0-patched.yml  13.0.json  13.0.yml  14.0.json  14.0.yml  15.0.json  15.0.yml  15.1.yml  16.0.yml  16.1.json  17.0.json  17.0.yml  18.0.json  18.0.yml  19.0.0.json  19.0.0.yml  20.0.1.yml  20.0.2.yml  20.0.3.json  21.1.2.json  21.1.2.yml  22.0.0.json  22.0.0.yml  22.0.2.json  22.0.2.yml  22.0.5.json  22.0.5.yml  23.0.0.json  23.0.1.yml  23.0.4.yml  (+16 more)
keycloak-openapi-transformer/: Cargo.toml  LICENSE
keycloak-openapi-transformer/src/: info.rs  main.rs  paths.rs  table.rs
keycloak-openapi-transformer/src/components/: schemas.rs
keycloak-openapi-transformer/src/paths/: operation.rs  parameters.rs  request_body.rs  response.rs  verb_path.rs
