[package]
name = "keycloak-openapi-transformer"
version = "0.1.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"

[dependencies]
indexmap = "1.4.0"
scraper = "0.12.0"
openapiv3 = "0.3.2"
serde = "1.0"
serde_json = "1.0"
cssparser = "0.27.2"
selectors = "0.22.0"
regex = "1.3.9"
lazy_static = "1.4.0"
