[package]
name = "keycloak-openapi-transformer"
version = "0.1.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"

[dependencies]
indexmap = "1.4.0"
scraper = "0.13.0"
openapiv3 = "1.0.3"
serde = "1.0"
serde_json = "1.0"
cssparser = "0.29.6"
selectors = "0.23.0"
regex = "1.5.6"
lazy_static = "1.4.0"
